data/Java/20-missing-paren/2/[M]Error.txt
*https://www.w3schools.com/java/java_methods.asp
MyClass.java:17: error: ')' expected
    public static void main(String[] args {
                                         ^